kubernetes/apps/jackett/jackett/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      restartPolicy: Always
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9117
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /api/v2.0/system/status
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v2.0/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
