kubernetes/apps/jackett/jackett/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: jackett
  labels:
    app: jackett
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
