kubernetes/apps/jackett/jackett/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett
  namespace: jackett
spec:
  hostnames:
    - jackett.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jackett
          namespace: jackett
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
